feat: add gross margine
